# mortgage_prediction

./: Makefile  README.md  environment.yml  pyproject.toml
mortgage_prediction/: __init__.py  dataset.py  features.py  plots.py
mortgage_prediction/modeling/: predict.py  train.py
notebooks/: 0.1-data_exploration.ipynb
references/: crt-file-layout-and-glossary.xlsx
