[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mortgage_prediction"
version = "0.0.1"
description = "A classification model for assessing risk of conventional mortgage loans."
authors = [
  { name = "Hunter Lonon" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.2"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mortgage_prediction"]
force_sort_within_sections = true
